--- a/tex/main.tex
+++ b/tex/main.tex
@@ -136,7 +136,7 @@ A/swine/Missouri/A02524711/2020 (H1N1), A/Camel/Inner\_Mongolia/XL/2020 (H7N9), 
 Swines are known to be efficient mixing vessels~\cite{ma2009pig,nelson2018origins,reid2003origin,Baumann}, and hence unsuprisingly host a large fraction of the risky strains ($>80\%$ over 6.0, to over $50\%$ over 6.5). Also, as  expected, most of these swine strains are of  H1N1 subtype, with the other subtypes  having emerged into humans more recently. Our finding that a H7N9 poses substantial risk is likewise not surprising:
 HH transmission has been suspected in asian-lineage H7N9 strains, and are rated by IRAT as having the greatest potential to cause a pandemic~\cite{qi2013probable}. The finding of  the most risky H9N2 strain in a mink is also unsurprising, in the light of these hosts  been recently suggested as efficient mixing vessels to breed human-compatible strains~\cite{sun2021mink}. Thus,  qualitatively results  are well aligned with the current expectations; nevertheless the ability to quantitatively rank  specific strains which pose maximal risk is a crucial new capability enabling proactive pandemic mitigation efforts.
 
-In conclusion, while numerous tools exist for ad hoc quantification of genomic similarity~\cite{posada1998modeltest,goldberger2005genomic,huelsenbeck1997phylogeny,neher2014predicting,VanderMeer2010,Smith2009}, a smaller  distance $i.e.$ a higher similarity of two strains in  these frameworks is not sufficient to imply a high likelihood of a jump. To the best of our knowledge, the \enet algorithm is  the first of its kind to learn an appropriate biologically meaningful comparison metric from data, without assuming any model of DNA or amino acid substitution, or a genealogical tree a priori. While the effect of the environment and selection cannot be inferred from a single sequence, an entire database of observed strains, processed through the right lens, can parse out useful predictive models of these complex interactions. Our results are  aligned with recent studies demonstrating effective  predictability of  future mutations  for different organisms~\cite{mollentze2021identifying,maher2021predicting}. Our approach   is currently limited by the fact that the \qdist calculation is currently applicable to analogous sequences (such as point variations of the same protein from different viral subtypes), and the \enet inference requires a  sufficient diversity of observed strains. A multi-variate regression analysis indicates  that the most important factor for our approach to succeed is  the diversity of the sequence dataset (see \SUPPLEMENTARY  Table~S-\ref{tabreg}), which would exclude applicability to completely novel pathogens with no related human variants, and ones that evolve very slowly. Nevertheless, the tools reported here can improve effectiveness of the annual flu shot, and perhaps allow for the development of preemptive vaccines to  target risky animal strains  before the first human infection in the next pandemic.
+In conclusion, while numerous tools exist for ad hoc quantification of genomic similarity~\cite{posada1998modeltest,goldberger2005genomic,huelsenbeck1997phylogeny,neher2014predicting,VanderMeer2010,Smith2009}, a smaller  distance $i.e.$ a higher similarity of two strains in  these frameworks is not sufficient to imply a high likelihood of a jump. To the best of our knowledge, the \enet algorithm is  the first of its kind to learn an appropriate biologically meaningful comparison metric from data, without assuming any model of DNA or amino acid substitution, or a genealogical tree a priori. While the effect of the environment and selection cannot be inferred from a single sequence, an entire database of observed strains, processed through the right lens, can parse out useful predictive models of these complex interactions. Our results are  aligned with recent studies demonstrating effective  predictability of  future mutations  for different organisms~\cite{mollentze2021identifying,maher2021predicting}. Our approach   is currently limited by the fact that the \qdist calculation is currently applicable to analogous sequences (such as point variations of the same protein from different viral subtypes), and the \enet inference requires a  sufficient diversity of observed strains. A multi-variate regression analysis indicates  that the most important factor for our approach to succeed is  the diversity of the sequence dataset (\SUPPLEMENTARY  Table~S-\ref{tabreg}), which would exclude applicability to completely novel pathogens with no related human variants, and ones that evolve very slowly. Nevertheless, the tools reported here can improve effectiveness of the annual flu shot, and perhaps allow for the development of preemptive vaccines to  target risky animal strains  before the first human infection in the next pandemic.
 
 \section*{\METHODS}
 \input{method}
@@ -198,7 +198,7 @@ In this study, we use sequences for the Hemaglutinnin (HA)  and Neuraminidase (N
 
 \section*{Supplementary Methods: Notes on q-Distance \& Supporting Results}
 
-The \textit{q-distance} is a pseudo-metric since  distinct sequences can induce the same distributions over each index, and thus evaluate to have a zero distance. This is  actually desirable; we do not want our distance to be  sensitive to changes that are not biologically relevant. The intuition is that  not all sequence variations brought about by substitutions are equally important or likely. Even with no  selection pressure, we might still see random  variations at an index if such variations do not affect the replicative fitness. Under that scenario, the corresponding $\Phi_i$ will predict a flat distribution no matter what the input sequence is, thus contributing nothing to the overall distance. And even if two strains $x,y$ have the same entry at some index $i$, the remaining residues  might induce different distributions $\Phi_i$ based on the remote dependencies, $i.e.$, the entries in $x_{-i},y_{-i}$. Also, it matters if the sequences come from two different background populations $P,Q$, $i.e.$, if the induced Qnets $\Phi^P,\Phi^Q$ are different. Thus, if we construct Qnets for H1N1 Influenza A separately for the collection years 2008 and 2009, then the same exact sequence collected in the respective years might have a non-zero distance between them, reflecting the fact that the background population the sequences arose from are different, inducing possibly different expected mutational tendencies (See SI-Table~\ref{SI-tabex}).
+The \qdist is a pseudo-metric since  distinct sequences can induce the same distributions over each index, and thus evaluate to have a zero distance. This is  actually desirable; we do not want our distance to be  sensitive to changes that are not biologically relevant. The intuition is that  not all sequence variations brought about by substitutions are equally important or likely. Even with no  selection pressure, we might still see random  variations at an index if such variations do not affect the replicative fitness. Under that scenario, the corresponding $\Phi_i$ will predict a flat distribution no matter what the input sequence is, thus contributing nothing to the overall distance. And even if two strains $x,y$ have the same entry at some index $i$, the remaining residues  might induce different distributions $\Phi_i$ based on the remote dependencies, $i.e.$, the entries in $x_{-i},y_{-i}$. Also, it matters if the sequences come from two different background populations $P,Q$, $i.e.$, if the induced Qnets $\Phi^P,\Phi^Q$ are different. Thus, if we construct Qnets for H1N1 Influenza A separately for the collection years 2008 and 2009, then the same exact sequence collected in the respective years might have a non-zero distance between them, reflecting the fact that the background population the sequences arose from are different, inducing possibly different expected mutational tendencies (\SUPPLEMENTARY Table~S-\ref{tabex}).
 
 Next, we induce q-distance  between a sequence and a population and between two populations.
 \begin{defn}[Pseudo-metric between populations]
@@ -214,9 +214,9 @@ Using the notion of Hausdorff metric between sets:
 
 
 
-\subsection*{In-silico Corroboration of \qnet Constraints}
+\subsection*{In-silico Corroboration of \enet Constraints}
 
-We carry out in-silico experiments to corroborate that the constraints represented within an inferred \qnet are indeed reflective of the  biology in play. We compare the results of simulated mutational perturbations to sequences from our databases (for which we have already constructed \qnet{s}), and then use NCBI BLAST (\href{https://blast.ncbi.nlm.nih.gov/Blast.cgi}{https://blast.ncbi.nlm.nih.gov/Blast.cgi}) to identify  if  our perturbed sequences match with existing sequences in the databases (See  SI-Fig.~\ref{SI-figsoa}). We find that in contrast to random variations, which rapidly diverge the trajectories, the \qnet constraints tend to produce smaller variance in the trajectories, maintain a high degree of match as we extend our trajectories, and produces matches closer in time to the collection time of the  initial sequence | suggesting that the \qnet  does indeed capture realistic constraints.
+We carry out in-silico experiments to corroborate that the constraints represented within an inferred \enet are indeed reflective of the  biology in play. We compare the results of simulated mutational perturbations to sequences from our databases (for which we have already constructed \enet{s}), and then use NCBI BLAST (\href{https://blast.ncbi.nlm.nih.gov/Blast.cgi}{https://blast.ncbi.nlm.nih.gov/Blast.cgi}) to identify  if  our perturbed sequences match with existing sequences in the databases (\SUPPLEMENTARY Fig.~S-\ref{figsoa}). We find that in contrast to random variations, which rapidly diverge the trajectories, the \enet constraints tend to produce smaller variance in the trajectories, maintain a high degree of match as we extend our trajectories, and produces matches closer in time to the collection time of the  initial sequence | suggesting that the \enet  does indeed capture realistic constraints.
 
 
 
@@ -228,9 +228,9 @@ We carry out in-silico experiments to corroborate that the constraints represent
 
 \subsection*{Multivariate Regression to Identify Factors in Strain Prediction}
 
-We investigate the key factors that contribute to our successful prediction of the dominant strain in the next season. We carry out a multivariate regression with data diversity, the complexity of inferred \qnet and the edit distance of the WHO recommendation from the dominant strain as independent variables. Here we define data diversity as the number of clusters we have in the input set of sequences, such that any two sequences five or less mutations apart are in the same cluster. \qnet complexity is measured by the number of decision nodes in the component decision trees of the recursive forest.
+We investigate the key factors that contribute to our successful prediction of the dominant strain in the next season. We carry out a multivariate regression with data diversity, the complexity of inferred \enet and the edit distance of the WHO recommendation from the dominant strain as independent variables. Here we define data diversity as the number of clusters we have in the input set of sequences, such that any two sequences five or less mutations apart are in the same cluster. \enet complexity is measured by the number of decision nodes in the component decision trees of the recursive forest.
 
-We select several plausible structures of the regression equation, and in each case conclude that  data diversity has the most important and statistically significant contribution (See SI-Tab.~\ref{tabreg}).
+We select several plausible structures of the regression equation, and in each case conclude that  data diversity has the most important and statistically significant contribution (\SUPPLEMENTARY Table~S-\ref{tabreg}).
 
 
 \clearpage
