--- a/tex/SIfig.tex
+++ b/tex/SIfig.tex
@@ -253,24 +253,24 @@ $^\star$ Dominant strain is calculated as the one closest to the centroid in the
 
 
 
-%#############################################
-%#############################################
+% %#############################################
+% %#############################################
 
-\begin{table}[!ht]\centering
-\captionN{Influenza A Strains Evaluated by IRAT and Corresponding \enet Computed Risk Scores}\label{irattab}
+% \begin{table}[!ht]\centering
+% \captionN{Influenza A Strains Evaluated by IRAT and Corresponding \enet Computed Risk Scores}\label{irattab}
 
-\sffamily\fontsize{7}{8}\selectfont
+% \sffamily\fontsize{7}{8}\selectfont
 
-\input{Figures/tabdata/irat_predictions}
-\flushleft
+% \input{Figures/tabdata/irat_predictions}
+% \flushleft
 
-\fontsize{8}{8}\selectfont
-$^\star$ HA strain is not available for A/duck/New York/1996, so this strain is omitted.\\
-$^{\star\star}$ Could not construct a \enet of human sequence data available for that virus sub-type (less than 30 strains), so we constructed a \enet using all human strains that match the HA sub-type, i.e. H5NX for H5N6.\\
-$^{\star\star\star}$ These strains did not have enough human sequence data to generate a \enet, even when only considering the HA sub-type. Thus, we estimated the risk score using every \enet from the other IRAT strains, and took the average among NA and HA. Finally, we took the geometric mean of the resulting NA and HA averages.
-\end{table}
+% \fontsize{8}{8}\selectfont
+% $^\star$ HA strain is not available for A/duck/New York/1996, so this strain is omitted.\\
+% $^{\star\star}$ Could not construct a \enet of human sequence data available for that virus sub-type (less than 30 strains), so we constructed a \enet using all human strains that match the HA sub-type, i.e. H5NX for H5N6.\\
+% $^{\star\star\star}$ These strains did not have enough human sequence data to generate a \enet, even when only considering the HA sub-type. Thus, we estimated the risk score using every \enet from the other IRAT strains, and took the average among NA and HA. Finally, we took the geometric mean of the resulting NA and HA averages.
+% \end{table}
 
-%#############################################
+% %#############################################
 
 
 %#############################################
