--- a/tex/extfiguresandtables.tex
+++ b/tex/extfiguresandtables.tex
@@ -138,9 +138,8 @@ $^\star$ Dominant strain is calculated as the one closest to the centroid in the
 \flushleft
 
  \fontsize{8}{8}\selectfont
-% $^\star$ HA strain is not available for A/duck/New York/1996, so this strain is omitted.\\
  $^{\star\star}$  \enet constructed using all human strains that match the HA sub-type, $e.g.$, H5Nx for H5N6.\\
- $^{\star\star\star}$ distance estaimated averaging over those obtained by considering all \enet{s} from other subtypes.% These strains did not have enough human sequence data to generate a \enet, even when only considering the HA sub-type. Thus, we estimated the risk score using every \enet from the other IRAT strains, and took the average among NA and HA. Finally, we took the geometric mean of the resulting NA and HA averages.
+ $^{\star\star\star}$ distance estaimated averaging over those obtained by considering all \enet{s} from other subtypes.
 \end{table}
 \else
 \refstepcounter{table}\label{irattab}
@@ -173,19 +172,11 @@ $^\star$ Dominant strain is calculated as the one closest to the centroid in the
 \bf\sffamily\fontsize{7}{7}\selectfont
 
 \input{Figures/tabdata/highrisk35}
-% \flushleft
-
-% \fontsize{8}{8}\selectfont
-% $^\star$ HA strain is not available for A/duck/New York/1996, so this strain is omitted.\\
-% $^{\star\star}$ Could not construct a \enet of human sequence data available for that virus sub-type (less than 30 strains), so we constructed a \enet using all human strains that match the HA sub-type, i.e. H5NX for H5N6.\\
-% $^{\star\star\star}$ These strains did not have enough human sequence data to generate a \enet, even when only considering the HA sub-type. Thus, we estimated the risk score using every \enet from the other IRAT strains, and took the average among NA and HA. Finally, we took the geometric mean of the resulting NA and HA averages.
 \end{table}
 \else
 \refstepcounter{table}\label{highrisktab}
 \fi
 % #############################################
-
-
 
 \ifFIGS
 
@@ -209,26 +200,5 @@ $^\star$ Dominant strain is calculated as the one closest to the centroid in the
 \refstepcounter{figure}\label{figriskyseq}
 \fi
 
-
-
-
-% %#############################################
-% %#############################################
-
-% \begin{table}\centering
-% \captionN{Riskiest Strains Currently Circulating in Swine}\label{tabrec11}
-
-% \sffamily\fontsize{7}{8}\selectfont
-
-% \input{Figures/tabdata/swine_combined}
-% \flushleft
-
-% \fontsize{7}{7}\selectfont
-% $^\star$ Converted IRAT Score computed using regression generated from the IRAT vs. Qnet comparison
-% \end{table}
-% %#############################################
-% %#############################################
-
-
-
+% #############################################
 
